cabal-version: 2.4
name: contain
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: BSD-3-Clause
author: jxv
maintainer: 3070597+jxv@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md

library
  other-modules:
    Data.Contain
  -- other-extensions:
  build-depends:
    base ^>=4.16.1.0,
    containers
  hs-source-dirs:
    src
  default-language:
    Haskell2010
